<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/images"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/academic_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_logo"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        android:inputType="number"
        android:autofillHints="" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/academic_id"
        android:layout_marginTop="32dp"
        android:hint="@string/fullname"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_name"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="16dp"
        android:hint="@string/semester"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/semester"
        android:layout_marginTop="32dp"
        android:text="@string/login"/>



</RelativeLayout>